// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionList component renders correctly with 1 accordion open 1`] = `
<div
  className="accordion-list1 container-accordion"
>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="active"
      index={0}
      titleText="list item 11"
      updateAccordionState={[Function]}
    />
  </div>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="inactive"
      index={1}
      titleText="list item 12"
      updateAccordionState={[Function]}
    >
      &lt;div className="defg1"&gt;&lt;/div&gt;
    </Styled(AccordionItem)>
  </div>
</div>
`;

exports[`AccordionList component renders correctly with no accordion open 1`] = `
<div
  className="accordion-list container-accordion"
>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="active"
      index={0}
      titleText="list item 1"
      updateAccordionState={[Function]}
    />
  </div>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="active"
      index={1}
      titleText="list item 2"
      updateAccordionState={[Function]}
    />
  </div>
</div>
`;

exports[`AccordionList component renders correctly with no accordion open 1 1`] = `
<div
  className="accordion-list2 container-accordion"
>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="active"
      index={0}
      titleText="list item 12"
      updateAccordionState={[Function]}
    />
  </div>
  <div
    className="list-item"
  >
    <Styled(AccordionItem)
      activeClass="active"
      index={1}
      titleText="list item 23"
      updateAccordionState={[Function]}
    />
  </div>
</div>
`;
